--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="keywords" content="Site keywords here" />
-    <meta name="description" content="" />
+    <meta name="description" content="Elevate your brand with high-performing content. The Hub connects you with leading creators, writers, videographers, influencers & more. Craft a winning content strategy & watch your brand flourish.  Join the waitlist!
+
+	pen_spark
+	
+	
+	
+	
+	tune
+	
+	share
+	
+	
+	more_vert
+	" />
     <meta name="copyright" content="" />
     <meta
       name="viewport"
@@ -13,7 +26,7 @@
     />
 
     <!-- Title -->
-    <title>Mediplus - Free Medical and Doctor Directory HTML Template.</title>
+    <title>Creatours - Connect with Top Creators & Build Your Dream Content Team</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.png" />
